# Cherry

./: CMakeLists.txt  README.md  main.cpp
include/cherry/ast/: ast_node.hpp  program.hpp  types.hpp
include/cherry/ast/expr/: binary_op.hpp  expression.hpp  function_call.hpp  grouping.hpp  identifier.hpp  literal.hpp  unary_op.hpp
include/cherry/ast/stmt/: assignment.hpp  break_statement.hpp  continue_statement.hpp  declaration.hpp  directive_statement.hpp  for_statement.hpp  function_call.hpp  function_decl.hpp  if_statement.hpp  return_statement.hpp  scope_block.hpp  scope_blocks.hpp  statement.hpp  while_loop.hpp
include/cherry/codegen/: llvm_codegen.hpp
include/cherry/debug/: ast_printer.hpp  ir_printer.hpp
include/cherry/ir/: ir_builder.hpp  ir_error.hpp  ir_function.hpp  ir_function_decl.hpp  ir_node.hpp  ir_param.hpp  ir_program.hpp  ir_return.hpp  ir_scope.hpp  ir_type.hpp  ir_values.hpp  ir_variable_assignment.hpp  ir_variable_decl.hpp
include/cherry/ir/instructions/: ir_assignment.hpp  ir_break.hpp  ir_continue.hpp  ir_directives.hpp  ir_for.hpp  ir_if.hpp  ir_instruction.hpp  ir_return.hpp  ir_variable_decl.hpp  ir_while.hpp
include/cherry/ir/values/: ir_binary.hpp  ir_constant.hpp  ir_function_call.hpp  ir_identifier.hpp  ir_unary.hpp  ir_value.hpp
include/cherry/lexer/: lex_error.hpp  lexer.hpp  token.hpp  token_type.hpp
include/cherry/llvm/: llvm_code_gen.hpp  llvm_runner.hpp
include/cherry/parser/: parse_error.hpp  parser.hpp
include/cherry/printer/: ast_printer.hpp  ir_printer.hpp  llvm_printer.hpp
include/cherry/semantic/: semantic_analyzer.hpp  semantic_error.hpp  symbol_table.hpp
lexer/include/: lex_error.hpp  lexer.hpp  token.hpp
lexer/src/: lex_error.cpp  lexer.cpp  token.cpp
spec/: cherry.grammar
src/ast/: ast_node.cpp
src/codegen/: llvm_codegen.cpp
src/ir/: ir_builder.cpp  ir_error.cpp
src/lexer/: lex_error.cpp  lexer.cpp  token.cpp  token_type.cpp
src/llvm/: llvm_code_gen.cpp
src/parser/: parse_error.cpp  parser.cpp
src/semantic/: semantic_analyzer.cpp  semantic_error.cpp  symbol_table.cpp
